Merged trunk changes (through rev 8956) into eliminate-liferay branch.