@@ -38,17 +38,18 @@ import org.dom4j.DocumentHelper;
 import org.dom4j.Element;
 
 import com.sitescape.team.ObjectKeys;
+import com.sitescape.team.domain.FileAttachment;
+import com.sitescape.team.domain.FolderEntry;
 import com.sitescape.team.domain.Group;
 import com.sitescape.team.domain.Principal;
 import com.sitescape.team.domain.User;
 import com.sitescape.team.module.file.WriteFilesException;
+import com.sitescape.team.module.shared.EmptyInputData;
 import com.sitescape.team.remoting.RemotingException;
 import com.sitescape.team.remoting.ws.BaseService;
 import com.sitescape.team.remoting.ws.model.PrincipalBrief;
 import com.sitescape.team.remoting.ws.model.PrincipalCollection;
-import com.sitescape.team.remoting.ws.util.DomInputData;
 import com.sitescape.team.remoting.ws.util.ModelInputData;
-import com.sitescape.team.util.stringcheck.StringCheckUtil;
 
 public class ProfileServiceImpl extends BaseService implements ProfileService, ProfileServiceInternal {
 
@@ -57,7 +58,7 @@ public class ProfileServiceImpl extends BaseService implements ProfileService, P
     	Map options = new HashMap();
     	options.put(ObjectKeys.SEARCH_OFFSET, new Integer(firstRecord));
     	options.put(ObjectKeys.SEARCH_MAX_HITS, new Integer(maxRecords));
-		Map results = getProfileModule().getPrincipals(getProfileModule().getProfileBinder().getId(), options);
+		Map results = getProfileModule().getPrincipals(options);
 		List users = (List) results.get(ObjectKeys.SEARCH_ENTRIES);
 		Element rootElement = doc.addElement("principals");
 		rootElement.addAttribute("first", ""+firstRecord);
@@ -72,12 +73,11 @@ public class ProfileServiceImpl extends BaseService implements ProfileService, P
 		return xml;
 	}
 	public String profile_getPrincipalAsXML(String accessToken, long binderId, long principalId) {
-		Long bId = new Long(binderId);
 		Long pId = new Long(principalId);
 		
 		// Retrieve the raw entry.
 		Principal entry = 
-			getProfileModule().getEntry(bId, pId);
+			getProfileModule().getEntry(pId);
 
 		Document doc = DocumentHelper.createDocument();
 		
@@ -90,56 +90,16 @@ public class ProfileServiceImpl extends BaseService implements ProfileService, P
 		
 		return xml;
 	}
-	
-	public long profile_addUserWithXML(String accessToken, long binderId, String definitionId, String inputDataAsXML) {
-		inputDataAsXML = StringCheckUtil.check(inputDataAsXML);
-
-		Document doc = getDocument(inputDataAsXML);
 		
-		try {
-			return getProfileModule().addUser(new Long(binderId), definitionId, new DomInputData(doc, getIcalModule()), null, null).longValue();
-		}
-		catch(WriteFilesException e) {
-			throw new RemotingException(e);
-		}
-
-	}
-	
-	public long profile_addGroupWithXML(String accessToken, long binderId, String definitionId, String inputDataAsXML) {
-		inputDataAsXML = StringCheckUtil.check(inputDataAsXML);
-
-		Document doc = getDocument(inputDataAsXML);
-		
-		try {
-			return getProfileModule().addGroup(new Long(binderId), definitionId, new DomInputData(doc, getIcalModule()), null, null).longValue();
-		}
-		catch(WriteFilesException e) {
-			throw new RemotingException(e);
-		}
-
-	}
-	
 	public void profile_addUserToGroup(String accessToken, long userId, String username, long groupId) {
 		getProfileModule().addUserToGroup(Long.valueOf(userId), username, Long.valueOf(groupId));
 	}
-	
-	public void profile_modifyPrincipalWithXML(String accessToken, long binderId, long principalId, String inputDataAsXML) {
-		inputDataAsXML = StringCheckUtil.check(inputDataAsXML);
-
-		Document doc = getDocument(inputDataAsXML);
 		
+	public void profile_deletePrincipal(String accessToken, long principalId, boolean deleteWorkspace) {
 		try {
-			getProfileModule().modifyEntry(new Long(binderId), new Long(principalId), new DomInputData(doc, getIcalModule()));
-		}
-		catch(WriteFilesException e) {
-			throw new RemotingException(e);
-		}
-
-	}
-	
-	public void profile_deletePrincipal(String accessToken, long binderId, long principalId) {
-		try {
-			getProfileModule().deleteEntry(new Long(binderId), new Long(principalId), null);
+			Map options = new HashMap();
+			options.put(ObjectKeys.INPUT_OPTION_DELETE_USER_WORKSPACE, Boolean.valueOf(deleteWorkspace));
+			getProfileModule().deleteEntry(new Long(principalId), options);
 		}
 		catch(WriteFilesException e) {
 			throw new RemotingException(e);
@@ -147,7 +107,7 @@ public class ProfileServiceImpl extends BaseService implements ProfileService, P
 
 	}
 	public long profile_addUserWorkspace(String accessToken, long userId) {
-		User user = (User)getProfileModule().getEntry(getProfileModule().getProfileBinder().getId(), userId);
+		User user = (User)getProfileModule().getEntry(userId);
 		return getProfileModule().addUserWorkspace(user, null).getId();
 	}
 	
@@ -155,7 +115,7 @@ public class ProfileServiceImpl extends BaseService implements ProfileService, P
     	Map options = new HashMap();
     	options.put(ObjectKeys.SEARCH_OFFSET, new Integer(firstRecord));
     	options.put(ObjectKeys.SEARCH_MAX_HITS, new Integer(maxRecords));
-		Map results = getProfileModule().getPrincipals(getProfileModule().getProfileBinder().getId(), options);
+		Map results = getProfileModule().getPrincipals(options);
 		List users = (List) results.get(ObjectKeys.SEARCH_ENTRIES);
 		
 		List<PrincipalBrief> principals = new ArrayList<PrincipalBrief>();
@@ -170,13 +130,16 @@ public class ProfileServiceImpl extends BaseService implements ProfileService, P
 				principals.toArray(array));
 	}
 		
-	public com.sitescape.team.remoting.ws.model.Group profile_getGroup(String accessToken, long binderId, long groupId) {
-		Long bId = Long.valueOf(binderId);
+	public com.sitescape.team.remoting.ws.model.Group profile_getGroupByName(String accessToken, String groupName, boolean includeAttachments) {
+		Group group = getProfileModule().getGroup(groupName);
+		return profile_getGroup(accessToken, group.getId(), includeAttachments);
+	}
+	public com.sitescape.team.remoting.ws.model.Group profile_getGroup(String accessToken, long groupId, boolean includeAttachments) {
 		Long gId = Long.valueOf(groupId);
 		
 		// Retrieve the raw entry.
 		Principal entry = 
-			getProfileModule().getEntry(bId, gId);
+			getProfileModule().getEntry(gId);
 
 		if(!(entry instanceof Group))
 			throw new IllegalArgumentException(gId + " does not represent a group. It is " + entry.getClass().getSimpleName());
@@ -188,14 +151,16 @@ public class ProfileServiceImpl extends BaseService implements ProfileService, P
 		
 		return groupModel;
 	}
-	
-	public com.sitescape.team.remoting.ws.model.User profile_getUser(String accessToken, long binderId, long userId) {
-		Long bId = Long.valueOf(binderId);
+	public com.sitescape.team.remoting.ws.model.User profile_getUserByName(String accessToken, String userName, boolean includeAttachments) {
+		User user = getProfileModule().getUser(userName);
+		return profile_getUser(accessToken, user.getId(), includeAttachments);
+	}
+	public com.sitescape.team.remoting.ws.model.User profile_getUser(String accessToken, long userId, boolean includeAttachments) {
 		Long uId = Long.valueOf(userId);
 		
 		// Retrieve the raw entry.
 		Principal entry = 
-			getProfileModule().getEntry(bId, uId);
+			getProfileModule().getEntry(uId);
 
 		if(!(entry instanceof User))
 			throw new IllegalArgumentException(uId + " does not represent an user. It is " + entry.getClass().getSimpleName());
@@ -210,7 +175,7 @@ public class ProfileServiceImpl extends BaseService implements ProfileService, P
 	
 	public long profile_addGroup(String accessToken, com.sitescape.team.remoting.ws.model.Group group) {
 		try {
-			return getProfileModule().addGroup(group.getParentBinderId(), group.getDefinitionId(), new ModelInputData(group), null, null).longValue();
+			return getProfileModule().addGroup(group.getDefinitionId(), new ModelInputData(group), null, null).longValue();
 		}
 		catch(WriteFilesException e) {
 			throw new RemotingException(e);
@@ -219,7 +184,7 @@ public class ProfileServiceImpl extends BaseService implements ProfileService, P
 	
 	public long profile_addUser(String accessToken, com.sitescape.team.remoting.ws.model.User user) {
 		try {
-			return getProfileModule().addUser(user.getParentBinderId(), user.getDefinitionId(), new ModelInputData(user), null, null).longValue();
+			return getProfileModule().addUser(user.getDefinitionId(), new ModelInputData(user), null, null).longValue();
 		}
 		catch(WriteFilesException e) {
 			throw new RemotingException(e);
@@ -228,7 +193,7 @@ public class ProfileServiceImpl extends BaseService implements ProfileService, P
 	
 	public void profile_modifyGroup(String accessToken, com.sitescape.team.remoting.ws.model.Group group) {
 		try {
-			getProfileModule().modifyEntry(group.getParentBinderId(), group.getId(), new ModelInputData(group));
+			getProfileModule().modifyEntry(group.getId(), new ModelInputData(group));
 		}
 		catch(WriteFilesException e) {
 			throw new RemotingException(e);
@@ -237,11 +202,27 @@ public class ProfileServiceImpl extends BaseService implements ProfileService, P
 	
 	public void profile_modifyUser(String accessToken, com.sitescape.team.remoting.ws.model.User user) {
 		try {
-			getProfileModule().modifyEntry(user.getParentBinderId(), user.getId(), new ModelInputData(user));
+			getProfileModule().modifyEntry(user.getId(), new ModelInputData(user));
 		}
 		catch(WriteFilesException e) {
 			throw new RemotingException(e);
 		}
+	}
+	public void profile_uploadFile(String accessToken, long principalId, String fileUploadDataItemName, String fileName) {
+		throw new UnsupportedOperationException();
+	}
+	public void profile_removeFile(String accessToken, long principalId, String fileName) {
+		try {
+			Principal entry = getProfileModule().getEntry(principalId);
+			FileAttachment att = entry.getFileAttachment(fileName);
+			if (att == null) return;
+			List deletes = new ArrayList();
+			deletes.add(att.getId());
+			getProfileModule().modifyEntry(principalId, new EmptyInputData(), null, deletes, null, null);			
+		}	catch(WriteFilesException e) {
+			throw new RemotingException(e);
+		}			
+
 	}
 
 }
